syntax = "proto3";

package actions;

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

// Actions Runtime definitions
service Actions {
  rpc Invoke (InvokeEnvelope) returns (InvokeEnvelope) {}
  rpc SaveState (SaveStateEnvelope) returns (google.protobuf.Empty) {}
  rpc GetState (GetStateEnvelope) returns (google.protobuf.Any) {}
  rpc UpdateEventSource (EventSource) returns (google.protobuf.Empty) {}
}

message InvokeEnvelope {
    google.protobuf.Any data = 1;
}

message EventSource {
  string name = 1;
  EventSourceSpec spec = 2;
}

message SaveStateEnvelope {
  repeated KeyVal state = 1;
}

message GetStateEnvelope {
  string key = 1;
}

message EventSourceSpec {
  string type = 1;
  google.protobuf.Any connection_info = 2;
}

// User Code definitions
service App {
  rpc Invoke (InvokeMethod) returns (google.protobuf.Any) {}
  rpc RestoreState (State) returns (google.protobuf.Empty) {}
  rpc GetConfig(google.protobuf.Empty) returns (ApplicationConfig) {}
}

message InvokeMethod {
    string method_name = 1;
    string context_id = 2;
    google.protobuf.Any data = 3;
}

message State {
  repeated KeyVal state = 1;
}

message KeyVal {
  string key = 1;
  google.protobuf.Any value = 2;
}

message ApplicationConfig {
  repeated string entities = 1;
}

// Placement service
service PlacementService {
    rpc ReportActionStatus(stream Host) returns (stream PlacementOrder) {}
}

message PlacementOrder {
  PlacementTables tables = 1;
  string operation = 2;
}

message PlacementTables {
  map<string, PlacementTable> entries = 1;
  string version = 2;
}

message PlacementTable {
  map<uint64, string> hosts = 1;
  repeated uint64 sortedSet = 2;
  map<string, Host> loadMap = 3;
  int64 totalLoad = 4;
}

message Host {
  string name = 1;
  int64 port = 2;
  int64 load = 3;
  repeated string entities = 4;
}
